<resources>
    <string name="app_name">Rusletur</string>
    <string name="email">Email</string>
    <string name="passord">Passord</string>
    <string name="login">Login</string>
    <string name="lag_en_ny_bruker">Lag en ny bruker</string>
    <string name="bekreft_passord">Bekreft Passord</string>
    <string name="avbryt">Avbryt</string>
    <string name="registrer">Registrer</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_message">Meldinger</string>
    <string name="nav_home">Hjem</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_trip">Lag en tur</string>
    <string name="nav_settings">Innstillinger</string>
    <string name="nav_logout">Logg ut</string>
    <string name="hint_text_username">Brukernavn</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_display_atrip_map">Map</string>
    <string name="recordfragment_start_button">Begynn å gå!</string>
    <string name="recordfragment_stop_button">Avslutt tur</string>
    <string name="recordfragment_showmap_button">Vis tur i kart</string>
    <string name="map_display_route_to_trip">Vis vei til tur</string>
    <string name="permissions_denied">Denne applikasjonen trenger tilgang til GPS og lokal lagring</string>
    <string name="record_warning">Huawei enhet oppdaget.
        Kontroller at enheten ikke har batterisparing aktivert,
    da dette kan ha stor påvirking av GPS-signal</string>
    <string name="nav_findtrip">Finn en tur</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_to_be_dispalyed">Item to be dispalyed</string>
    <string-array name="kommune">
        <item>Sel</item>
        <item>Vågå</item>
    </string-array>
    <string-array name="fylke">
        <item>Oppland</item>
    </string-array>
</resources>
