<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscreen_background"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp" />




    <android.support.constraint.ConstraintLayout
        android:id="@+id/mainA_loginLayout_cLayoutLogin"
        android:layout_width="300dp"
        android:layout_height="332dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="74dp"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927"
        android:visibility="visible"
        >

        <EditText
            android:id="@+id/mainA_loginEmail_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            app:layout_constraintBottom_toTopOf="@+id/mainA_loginPass_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/mainA_loginPass_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passord"
            android:inputType="textPassword"
            android:textColor="#fff"
            app:layout_constraintBottom_toTopOf="@+id/mainA_loginUser_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainA_loginEmail_editText" />

        <Button
            android:id="@+id/mainA_loginUser_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loginUser"
            android:text="Login"
            app:layout_constraintBottom_toTopOf="@+id/mainA_RegisterUser_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainA_loginPass_editText" />

        <Button
            android:id="@+id/mainA_RegisterUser_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToRegistration"
            android:text="Registrer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainA_loginUser_button" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mainA_registrerLayout_cLayoutLogin"
        android:layout_width="300dp"
        android:layout_height="332dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="74dp"
        android:background="#80000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927">

        <EditText
            android:id="@+id/mainA_registrerEmail_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            app:layout_constraintBottom_toTopOf="@+id/mainA_registrerPass_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mainA_registrerPass_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passord"
            android:inputType="textPassword"
            android:textColor="#fff"
            app:layout_constraintBottom_toTopOf="@+id/mainA_registrerPassConfirm_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainA_registrerEmail_editText" />

        <EditText
            android:id="@+id/mainA_registrerPassConfirm_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/bekreft_passord"
            android:inputType="textPassword"
            android:textColor="#fff"
            app:layout_constraintBottom_toTopOf="@+id/mainA_registrerButton_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainA_registrerPass_editText" />

        <Button
            android:id="@+id/mainA_registrerButton_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerUser"
            android:text="@string/registrer"
            app:layout_constraintBottom_toTopOf="@+id/mainA_cancleRegistration_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainA_registrerPassConfirm_editText" />

        <Button
            android:id="@+id/mainA_cancleRegistration_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancleRegistration"
            android:text="@string/avbryt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainA_registrerButton_Button" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="RusleTur"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>